working on mqtt 20250312

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,3 +20,8 @@ services:
     volumes:
       - "./mongo-data:/data/db"
     
+  mqtt:
+    build: mqtt-container/.
+    ports:
+      - 1883:1883
+
